fixed calories and servings stuff

--- a/app/templates/app/meals.html
+++ b/app/templates/app/meals.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Mealy - Meal Plan{% endblock %}
+{% load mealy_extras %}
 
 {% block content %}
   <script>
@@ -45,11 +46,10 @@
 
   $(document).ready(function(){
     $('#exchangeMeals').on('click',function() {
-      $('.item').each(function(i) {
-        if($(this).hasClass(".select-for-reshuffle")) {
-        $('#hiddenMealInput').val($('#hiddenMealInput').val() + $(this).attr('data-meal') + i);
+      $('.meal-item').each(function(i, element) {
+        if($(this).hasClass("select-for-reshuffle")) {
+        $('#hiddenMealInput').val($('#hiddenMealInput').val() + i + ',');
       }
-      return false;
       })
     });
   });
@@ -78,8 +78,8 @@
       {% csrf_token %}
       {{ form.as_p }}
       <button id="newMealPlan" class="buttonRound" type="submit" name="newMealPlan">New Meals</button>
-      <button id="exchangeMeals" class="buttonRound"  name="exchangeMeals">Exchange Meals</button>
-      <input type="hidden" name="hiddenMealInput" id="hiddenMealInput"></input>
+      <button id="exchangeMeals" class="buttonRound" type="submit" name="exchangeMeals">Exchange Meals</button>
+      <input name="hiddenMealInput" id="hiddenMealInput"></input>
       </form>
     </div>
 
@@ -91,7 +91,7 @@
     <div class="item"><h3>Saturday</h3></div>
     <div class="item"><h3>Sunday</h3></div>
     {% for breakfast in breakfasts %}
-      <div class="item" data-meal="breakfast" data-id="{{breakfast.id}}">
+      <div class="item meal-item" data-id="{{breakfast.id}}">
         <a class="card">
           <div class="thumb" style="background-image: url({{breakfast.image}});">
             <span class="fa-layers fa-fw">
@@ -103,7 +103,8 @@
             <h1>{{breakfast.title}}</h1>
             <p><i class="far fa-star"></i> Rating: {{breakfast.rating|floatformat:-2}}/5 <br/>
                <i class="far fa-clock"></i> Ready in: {{breakfast.minutes}} min<br/>
-               <i class="fas fa-burn"></i> Cals: {{breakfast.calories}}
+               <i class="fas fa-burn"></i> Cals: {{ breakfast.calories|cut:"0" }}<br/>
+               <i class="fas fa-utensils"></i> Servings: {{ breakfast.calories|cut:"1" }}
             </p>
             <span>Breakfast</span>
           </article>
@@ -128,7 +129,7 @@
     {% endfor %}
 
     {% for lunch in lunches %}
-      <div class="item" data-meal="lunch" data-id"{{lunch.id}}">
+      <div class="item meal-item" data-id"{{lunch.id}}">
         <a class="card">
           <div class="thumb" style="background-image: url({{lunch.image}});">
             <span class="fa-layers fa-fw">
@@ -140,7 +141,8 @@
             <h1>{{lunch.title}}</h1>
             <p><i class="far fa-star"></i>Rating: {{lunch.rating|floatformat:-2}}/5 <br/>
                <i class="far fa-clock"></i>Ready in: {{lunch.minutes}} min<br/>
-               <i class="fas fa-burn"></i> Cals: {{lunch.calories}}
+               <i class="fas fa-burn"></i> Cals: {{ lunch.calories|cut:"0" }}<br/>
+               <i class="fas fa-utensils"></i> Servings: {{ lunch.calories|cut:"1" }}
             </p>
             <span>Lunch</span>
           </article>
@@ -165,7 +167,7 @@
     {% endfor %}
 
     {% for dinner in dinners %}
-      <div class="item" data-meal="dinner" data-id="{{dinner.id}}">
+      <div class="item meal-item" data-id="{{dinner.id}}">
         <a class="card">
           <div class="thumb" style="background-image: url({{dinner.image}});">
             <span class="fa-layers fa-fw">
@@ -177,7 +179,8 @@
             <h1>{{dinner.title}}</h1>
             <p><i class="far fa-star"></i> Rating: {{dinner.rating|floatformat:-2}}/5 <br/>
               <i class="far fa-clock"></i> Ready in: {{dinner.minutes}} min<br />
-              <i class="fas fa-burn"></i> Cals: {{dinner.calories}}
+              <i class="fas fa-burn"></i> Cals: {{ dinner.calories|cut:"0" }}<br/>
+              <i class="fas fa-utensils"></i> Servings: {{ dinner.calories|cut:"1" }}
             </p>
             <span>Dinner</span>
           </article>
